fix the sidebar and the header being overlaped with other elements that have relative positioning

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -9,6 +9,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  z-index: 1;
 
   @media (min-width: breakpoint.$desktop) {
     width: 17.5rem;
